--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 .App {
   background-color: #c8d6e5;
   min-height: 100vh;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
