feat(pathfile): add path file

--- a/src/Componentes/ClientOptions/ClientOptions.css
+++ b/src/Componentes/ClientOptions/ClientOptions.css
@@ -1,13 +1,26 @@
 .options-style {
-    max-width: 100vw;
-    width: 100vw;
+    max-width: calc(100vw + 15px);
+    width: calc(100vw + 15px);
+    margin-right: 0px;
     height: calc(100vh - 86px);
 }
 div.col-sm-3 {
     padding-right: 0%;
     max-width: 180px;
-    width: 170px;
+    width: 180px;
     box-sizing: border-box;
+}
+div.col-sm-9 {
+    padding-right: 0px;
+    padding-left: 5px;
+    max-width: calc(100vw - 180px + 15px);
+    width: calc(100vw - 180px + 15px);
+}
+@media (min-width: 576px) 
+{
+    .col-sm-9 {
+        flex: unset !important;
+    }
 }
 svg {
     margin-right: 10px;
