feat(addfiledirectory): add file explore

--- a/src/Componentes/ClientOptions/ClientOptions.css
+++ b/src/Componentes/ClientOptions/ClientOptions.css
@@ -11,6 +11,7 @@ div.col-sm-3 {
     box-sizing: border-box;
 }
 div.col-sm-9 {
+    overflow-y: scroll;
     padding-right: 0px;
     padding-left: 5px;
     max-width: calc(100vw - 180px + 15px);
