--- a/src/Componentes/ClientOptions/ClientOptions.css
+++ b/src/Componentes/ClientOptions/ClientOptions.css
@@ -2,7 +2,8 @@
     max-width: calc(100vw + 15px);
     width: calc(100vw + 15px);
     margin-right: 0px;
-    height: calc(100vh - 86px);
+    /* height: calc(100vh - 86px); */
+    height: 100%;
 }
 div.col-sm-3 {
     padding-right: 0%;
@@ -11,7 +12,7 @@ div.col-sm-3 {
     box-sizing: border-box;
 }
 div.col-sm-9 {
-    overflow-y: scroll;
+    height: 100%;
     padding-right: 0px;
     padding-left: 5px;
     max-width: calc(100vw - 180px + 15px);
@@ -21,6 +22,7 @@ div.col-sm-9 {
 {
     .col-sm-9 {
         flex: unset !important;
+        
     }
 }
 svg {
@@ -30,7 +32,7 @@ svg {
     box-sizing: border-box;
     background-color: #dcdde1;
     height: calc(100vh - 86px);
-    justify-content:space-evenly;
+    /* justify-content:space-evenly; */
     width: 170px;
     margin-right: 0px;
 }
@@ -38,7 +40,7 @@ svg {
     margin-left: 10px;
 }
 .nav-pills .nav-item {
-    height: calc(100%/3);
+    /* height: calc(100%/3); */
 }
 .nav-pills .nav-item > a {
     height: 100%;
