--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,19 @@
-body {
+/* html, body{
+  overflow-y: hidden;
+  height: 100%;
+} */
+ body {
+  
+  box-sizing: border-box;
+  min-height: 100vh;
+  
+  height: 100%;
+  max-width: 100vw;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin); */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
