feat(files): add update, rename and remove
add upload, rename and remove for fileas and folders

--- a/src/Componentes/FileVisor/TableFiles.css
+++ b/src/Componentes/FileVisor/TableFiles.css
@@ -1,5 +1,5 @@
-
-.table{
-    
-    overflow-y: auto !important;
+.talbe-scroll {
+    overflow-y: auto;
+    height: 68vh;
+    max-height: 68vh;
 }
