--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,13 @@
   overflow-y: hidden;
   height: 100%;
 } */
- body {
+ body, html {
   
   box-sizing: border-box;
   min-height: 100vh;
   
   height: 100%;
+  overflow-y: hidden;
   max-width: 100vw;
   /* display: flex;
   flex-direction: column;
