fix(createuser): fix type user

--- a/src/Componentes/ListarUsers/Listar.css
+++ b/src/Componentes/ListarUsers/Listar.css
@@ -1,6 +1,6 @@
 .view-users {
     margin-top: 10px;
     overflow-y: auto;
-    height: 75vh;
-    max-height: 75vh;
+    height: 65vh;
+    max-height: 7¿65vh;
 }
